# rqst-async

./: .rqst.toml  Cargo.toml  LICENSE  README.md  rqst.toml
.githooks/: pre-commit
.github/workflows/: ci.yaml
crates/chatbot/: Cargo.toml
crates/chatbot/src/: lib.rs
crates/miniserve/: Cargo.toml
crates/miniserve/src/: lib.rs  protocol.rs
crates/server/: Cargo.toml  index.html
crates/server/src/: main.rs  stateful.rs
