[package]
name = "miniserve"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.30", default-features = false }
http = "1.1.0"
httparse = "1.9.4"
tokio = { workspace = true, features = ["net", "rt"] }
tokio-stream = { version = "0.1.15", default-features = false }
tokio-util = { version = "0.7.11", default-features = false, features = ["codec"] }
